docs/version-1.32/modules/en/pages/howtos/security-hardening/security-hardening.adoc
include::partial$variables.adoc[]
= Security hardening
:revdate: 2025-11-25
:page-revdate: {revdate}
:sidebar_label: Security hardening
:sidebar_position: 50
:description: Learn how to secure your Kubernetes installation by applying hardening tips and best practices for network policy configuration and sensitive data storage
:keywords: ["{project-name}", kubewarden, kubernetes, security]
:doc-persona: kubewarden-operator, kubewarden-integrator
:doc-type: howto
:doc-topic: operator-manual, security

{project-name} strives to be secure with little configuration. In this
section and its subpages, you can find hardening tips (with their trade-offs)
to secure {short-project-name} itself.

Please refer to the xref:/reference/threat-model.adoc[threat model] for more
information.

== `kubewarden-defaults` Helm chart

Operators can obtain a secure deployment by installing all the {short-project-name} Helm
charts. It's recommended to install the `kubewarden-defaults` Helm chart and
enable its recommended policies with:

[source,console]
----
helm install --wait -n kubewarden kubewarden-defaults kubewarden/kubewarden-defaults \
  --set recommendedPolicies.enabled=True \
  --set recommendedPolicies.defaultPolicyMode=protect
----

This provides a default PolicyServer and default policies, in protect mode, to
ensure the {short-project-name} stack is safe from other workloads.

== Verifying {short-project-name} artifacts

Refer to the xref:/tutorials/verifying-kubewarden.adoc[Verifying
{short-project-name}] tutorial.

== RBAC

{short-project-name} describes RBAC configurations in different _Explanations_
sections. Users can fine-tune the needed permissions for the
xref:/explanations/audit-scanner/audit-scanner.adoc#_permissions_and_serviceaccounts[Audit
Scanner] feature, as well as xref:/explanations/context-aware-policies.adoc[per
Policy Server] Service Account for the context-aware feature.

To view all Roles:

[source,console]
----
kubectl get clusterroles,roles -A | grep kubewarden
----

== Per-policy permissions

For context-aware policies, operators specify fine-grained permissions per
policy under its `spec.contextAwareResources`, and those work in conjunction
with the Service Account configured for the Policy Server where the policy
runs.

== Workload coverage

By default, {short-project-name} excludes specific Namespaces from
{short-project-name} coverage. This is done to simplify first-time use and
interoperability with other workloads.

Security-conscious operators can tune these Namespaces list via the
`.global.skipNamespaces` value for both the `kubewarden-controller` and
`kubewarden-defaults` Helm charts.

== Pod Security Admission

From 1.23, {short-project-name}'s stack is able to run in a Namespace where the
https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted[`restricted``
Pod Security Standards] are in place, with current Pod hardening best
practices.

To do that, you need to add the `pod-security.kubernetes.io/enforce:
restricted` label to the {short-project-name} deployment Namespace.

```console
kubectl label namespace kubewarden pod-security.kubernetes.io/enforce=restricted --overwrite
```

See the
https://kubernetes.io/docs/concepts/security/pod-security-admission/[official
documentation] of Kubernetes' Pod Security Admission for more details.

=== SecurityContexts

The `kubewarden-controller` Helm chart configures the SecurityContexts and
exposes them in its `values.yaml`.

The `kubewarden-defaults` Helm chart allows for configuring the default Policy
Server `.spec.securityContexts` under `.Values.policyServer.securityContexts`.

For Policy Servers managed by operators, you can configure them via their
xref:/reference/CRDs.adoc#_policyserversecurity[`spec.securityContexts`].
